# cairn-scraping

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scraper/: Dockerfile  scrapy.cfg
scraper/cairn_scraper/: items.py  pipelines.py  settings.py
scraper/cairn_scraper/spiders/: ouvrages.py
scripts/: bootstrap.py  init_es_index.py  scraper_worker.py  wait_for_services.py
webapp/: Dockerfile  app.py
webapp/pages/: 1_recherche.py  1_🔍_Recherche.py  2_fiche.py  2_statistiques.py  2_📖_Fiche.py  3_scraping.py  3_📊_Statistiques.py
webapp/tests/: fixtures.json  seed_fixtures.py
webapp/utils/: components.py  es_client.py  scraper_client.py
