[project]
name = "cairn-scraping"
version = "0.1.0"
description = "Scraping et visualisation d'ouvrages Cairn"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
scraper = [
    "scrapy>=2.11",
    "pymongo>=4.6",
    "elasticsearch>=8.12",
]
webapp = [
    "streamlit>=1.40",
    "elasticsearch>=8.12",
    "plotly>=5.18",
]
